feat(operations): allow single carrier assignment on create
